--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
 <!DOCTYPE HTML>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Cullen's WebApp Dashboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styles.css" rel="stylesheet">
+  </head>
+
+<body>
+<div class="grid-container">
+<header id="header">
+  <h1>YourApp</h1>
+  <div>
+    <img src="icons/icon-bell.svg" alt="bell icon">
+  </div>
+  <div id="notifications">
+
+  </div>
+  <img src="images/Cullen.jpg" alt="Cullen">
+  <h3>Cullen Kuch</h3>
+</header>
+
+
+
+
+<nav id="nav">
+  <a>
+    <img src="icons/icon-dashboard.svg" alt="dashboard icon">
+  </a>
+  <a>
+    <img src="icons/icon-members.svg" alt="members icon">
+  </a>
+  <a>
+    <img src="icons/icon-visits.svg" alt="visits icon">
+  </a>
+  <a>
+    <img src="icons/icon-settings.svg" alt="settings icon">
+  </a>
+</nav>
+
+<main>
+
+
+
+
+</main>
+
+
+
+
+
+
+
+
+
+
+</div>
+</body>
