--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Cullen's WebApp Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
     <link href="toggle-switch.css" rel="stylesheet">
   </head>
