--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="grid-container">
-  <header id="header">
+  <header class="header">
     <h1>YourApp</h1>
     <div class="bell">
       <img src="icons/icon-bell.svg" alt="bell icon">
@@ -24,7 +24,7 @@
   </header>
 
 
-  <nav id="nav">
+  <nav class="nav">
     <a>
       <img src="icons/icon-dashboard.svg" alt="dashboard icon">
     </a>
@@ -39,7 +39,7 @@
     </a>
   </nav>
 
-  <main id="main">
+  <main class="main">
     <div class="main-header">
       <h2 class="headline">Dashboard</h2>
       <div class="main-header-search">
@@ -86,6 +86,7 @@
     </div>
   </section>
 
+<!-- Social Media -->
   <div class="social-container">
     <div class="social-image">
      <img src="icons/icon-twitter.svg" alt="twitter icon">
@@ -152,7 +153,7 @@
     </div>
     <p>10/15/15</p>
   </div>
-
+</section>
 
   <!-- Recent Activity widget -->
   <section class="recent-activity">
@@ -190,6 +191,7 @@
     </div>
     <p>></p>
   </div>
+</section>
 
   <!-- Messaging Widget -->
   <section class="message">
