--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
   <div class="grid-container">
 
+<!-- HEADER -->
+
   <header class="header">
     <h1>Your<span class="light">App&trade;</span></h1>
     <div class="bell">
@@ -23,6 +25,7 @@
     <h3>Cullen Kuch</h3>
   </header>
 
+<!-- NAVIGATION -->
 
   <nav class="nav">
     <a>
@@ -38,6 +41,8 @@
       <img src="icons/icon-settings.svg" alt="settings icon">
     </a>
   </nav>
+
+<!-- MAIN SECTION -->
 
   <main class="main">
     <div class="main-header">
