--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
     <div class="traffic-header">
       <h3>Traffic</h3>
       <ul class="traffic-nav">
-        <li class="traffic-nav-link">Hourly</li>
+        <li class="traffic-nav-link traffic-active">Hourly</li>
         <li class="traffic-nav-link">Daily</li>
-        <li class="traffic-nav-link active">Weekly</li>
+        <li class="traffic-nav-link">Weekly</li>
         <li class="traffic-nav-link">Monthly</li>
       </ul>
     </div>
