--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header class="header">
     <h1>Your<span class="light">App&trade;</span></h1>
     <div class="bell">
-      <img src="icons/icon-bell.svg" alt="bell icon">
+      <img src="icons/icon-bell.svg" alt="bell icon" class="bell-solo">
       <span class="bell-dot"></span>
     </div>
     <div id="notifications"></div>
@@ -93,9 +93,12 @@
 
 <!-- Social Media -->
 <div class="social-media">
+  <h3>Social Stats</h3>
   <div class="social-container">
     <div class="social-image">
-     <img src="icons/icon-twitter.svg" alt="twitter icon">
+      <svg height="57" width="57" version="1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" class="twitter">
+        <path d="M32 3l-4 1c2-1 3-2 3-4l-4 2-5-2c-3 0-6 3-6 7v1C10 8 6 5 2 1L1 5c0 2 2 4 3 5L1 9c0 3 3 6 6 7H4c0 2 3 4 6 4-3 2-5 3-8 3H0A19 19 0 0 0 29 7l3-4z"/>
+      </svg>
       </div>
        <div class="social-text">
           <p>Twitter</p>
@@ -105,7 +108,9 @@
 
   <div class="social-container">
     <div class="social-image">
-     <img src="icons/icon-facebook.svg" alt="facebook icon">
+       <svg height="56.693px" viewBox="0 0 57 57" width="56.693px" xmlns="http://www.w3.org/2000/svg" class="facebook">
+          <path d="M40 22h-7v-5c0-2 1-3 2-3h5V6h-7c-8 0-10 6-10 10v6h-5v8h5v24h10V30h7v-8z"/>
+       </svg>
       </div>
        <div class="social-text">
           <p>Facebook</p>
@@ -115,7 +120,9 @@
 
   <div class="social-container">
     <div class="social-image">
-     <img src="icons/icon-google-plus.svg" alt="google icon">
+      <svg version="1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="57" height="57">
+         <path d="M18 26v-1l-1-1v-1l-1-1-1-1h-1v-1h-1-1-2l-2 1-2 1-1 1v4l2 2 2 1h5l2-1 1-1 1-2zM15 9a11 11 0 0 0-1-5l-1-2-3-1-2 2-1 3v4l2 1 1 2h2l3-1V9zm-2-9h8l-2 2h-3l2 2 1 3v3l-1 1-2 2-1 1v2l1 1 1 1 1 1 1 1 1 2v2l-2 5c-2 2-5 3-8 3H7l-2-1-2-1-2-2v-2l1-3 1-2 3-1a33 33 0 0 1 6-1l-1-3v-1-1h-1c-2 0-4 0-5-2L3 8l2-5 4-3h4zm20 5v2h-5v5h-3V7h-5V5h5V0h3v5h5z"/>
+       </svg>
       </div>
        <div class="social-text">
           <p>Google</p>
@@ -123,6 +130,7 @@
        </div>
   </div>
 </div>
+
   <!-- new members widget -->
   <section class="members">
     <h3>New Members</h3>
@@ -165,33 +173,33 @@
   <section class="recent-activity">
     <h3>Recent Activity</h3>
 
-  <div class="members-container">
+  <div class="recent-container">
         <img src="images/member-1.jpg" class="profile-image">
-    <div class="members-text">
+    <div class="recent-text">
         <p>Victoria Chambers commented on YourApp's SEO Tips</p>
         <p>4 hours ago</p>
     </div>
     <p>></p>
   </div>
-  <div class="members-container">
+  <div class="recent-container">
         <img src="images/member-2.jpg" class="profile-image">
-    <div class="members-text">
+    <div class="recent-text">
         <p>Dale Byrd liked the post Facebook's Changes for 2016</p>
         <p>5 hours ago</p>
     </div>
     <p>></p>
   </div>
-  <div class="members-container">
+  <div class="recent-container">
         <img src="images/member-3.jpg" class="profile-image">
-    <div class="members-text">
+    <div class="recent-text">
         <p>Dawn Wood commented on Facebook's Changes for 2016</p>
         <p>6 hours ago</p>
     </div>
     <p>></p>
   </div>
-  <div class="members-container">
+  <div class="recent-container">
         <img src="images/member-4.jpg" class="profile-image">
-    <div class="members-text">
+    <div class="recent-text">
         <p>Dan Oliver posted YourApps's SEO Tips</p>
         <p>1 day ago</p>
     </div>
@@ -204,7 +212,7 @@
     <h3>Message User</h3>
     <form class="widget-container">
       <input type="text" placeholder="Search for user" class="form-field" id="userField">
-      <textarea placeholder="Message for user" class="form-area" id= "messageField" ></textarea>
+      <textarea placeholder="Message for user" class="form-area" id="messageField"></textarea>
       <button class="button-primary" id="send">Send</button>
     </form>
   </section>
