--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <form class="widget-container">
       <input type="text" placeholder="Search for user" class="form-field" id="userField">
       <textarea placeholder="Message for user" class="form-area" id="messageField"></textarea>
-      <button class="button-primary" id="send">Send</button>
+      <button class="button-primary" id="send">SEND</button>
     </form>
   </section>
 
@@ -221,19 +221,22 @@
   <section class="settings">
   <h3>Settings</h3>
 
-  <label class="switch-light switch-material" onclick="">
-    <input type="checkbox">
-
-    <strong>
-      Wireless
-    </strong>
-
-    <span>
-      <span>Off</span>
-      <span>On</span>
-      <a></a>
-    </span>
-  </label>
+  <div>
+     <div class="toggle-area">
+         <p class="setting-text">Send Email Notifications</p>
+             <div class="toggle-button-email">
+                 <p id="email-toggle">OFF</p>
+                 <div class="toggle-circle"></div>
+             </div>
+    </div>
+    <div class="toggle-area">
+          <p class="setting-text">Set Profile to Public</p>
+              <div class="toggle-button-profile">
+                <p id="profile-toggle">OFF</p>
+                <div class="toggle-circle"></div>
+             </div>
+    </div>
+  </div>
 
   <select class="form-field" id="timezone">
     <option disabled selected>Select a Timezone</option>
