--- a/index.html
+++ b/index.html
@@ -221,24 +221,25 @@
   <section class="settings">
   <h3>Settings</h3>
 
-  <div>
-     <div class="toggle-area">
-         <p class="setting-text">Send Email Notifications</p>
-             <div class="toggle-button-email">
-                 <p id="email-toggle">OFF</p>
-                 <div class="toggle-circle"></div>
-             </div>
-    </div>
-    <div class="toggle-area">
-          <p class="setting-text">Set Profile to Public</p>
-              <div class="toggle-button-profile">
-                <p id="profile-toggle">OFF</p>
-                <div class="toggle-circle"></div>
-             </div>
-    </div>
-  </div>
+  <!-- Toogle Code here -->
+           <div>
+               <div class="toggle-area">
+                   <p class="setting-text">Send Email Notifications</p>
+                   <div class="toggle-button-email">
+                       <p id="email-toggle">OFF</p>
+                       <div class="toggle-circle"></div>
+                   </div>
+               </div>
+               <div class="toggle-area">
+                       <p class="setting-text">Set Profile to Public</p>
+                       <div class="toggle-button-profile">
+                           <p id="profile-toggle">OFF</p>
+                           <div class="toggle-circle"></div>
+                       </div>
+                   </div>
+           </div>
 
-  <select class="form-field" id="timezone">
+  <select id="timezone">
     <option disabled selected>Select a Timezone</option>
     <option>Eastern</option>
     <option>Standard</option>
