--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
   </section>
 
 <!-- Social Media -->
+<h3 class="social-header">Social Stats</h3>
 <div class="social-media">
-  <h3>Social Stats</h3>
   <div class="social-container">
     <div class="social-image">
       <svg height="57" width="57" version="1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" class="twitter">
