--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- line graph charts -->
   <section class="traffic">
     <div class="traffic-header">
-      <h3>Traffic</h3>
+      <h3>TRAFFIC</h3>
       <ul class="traffic-nav">
         <li class="traffic-nav-link traffic-active">Hourly</li>
         <li class="traffic-nav-link">Daily</li>
@@ -75,7 +75,7 @@
 
   <!-- bar graph -->
   <section class="daily">
-  <h3>Daily Traffic</h3>
+  <h3>DAILY TRAFFIC</h3>
     <div class="widget-container-half">
     <!-- element line graph will attach to -->
     <canvas id="daily-chart"></canvas>
@@ -84,7 +84,7 @@
 
   <!-- doughnut graph -->
   <section class="mobile-users">
-  <h3>Mobile Users</h3>
+  <h3>MOBILE USERS</h3>
     <div class="widget-container-half">
     <!-- element line graph will attach to -->
     <canvas id="mobile-chart"></canvas>
@@ -92,7 +92,7 @@
   </section>
 
 <!-- Social Media -->
-<h3 class="social-header">Social Stats</h3>
+<h3 class="social-header">SOCIAL STATS</h3>
 <div class="social-media">
   <div class="social-container">
     <div class="social-image">
@@ -133,7 +133,7 @@
 
   <!-- new members widget -->
   <section class="members">
-    <h3>New Members</h3>
+    <h3>NEW MEMBERS</h3>
 
   <div class="members-container">
         <img src="images/member-1.jpg" class="profile-image">
@@ -171,7 +171,7 @@
 
   <!-- Recent Activity widget -->
   <section class="recent-activity">
-    <h3>Recent Activity</h3>
+    <h3>RECENT ACTIVITY</h3>
 
   <div class="recent-container">
         <img src="images/member-1.jpg" class="profile-image">
