--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <link href="css/awesomplete.css rel="stylesheet">
     <link href="css/toggle-switch.css" rel="stylesheet">
   </head>
 
@@ -256,6 +257,7 @@
 
   </div>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-  <script src="javascript/scripts.js"></script>
+  <script src="js/awesomplete.js"></script>
+  <script src="js/scripts.js"></script>
  </body>
 </html>
