user and timezone sizes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
-    <link href="css/awesomplete.css rel="stylesheet">
+    <link href="css/awesomplete.css" rel="stylesheet">
     <link href="css/toggle-switch.css" rel="stylesheet">
   </head>
 
@@ -137,7 +137,7 @@
     <h3>NEW MEMBERS</h3>
 
   <div class="members-container">
-        <img src="images/member-1.jpg" class="profile-image">
+        <img src="images/member-1.jpg" class="profile-image" alt="victoria">
     <div class="members-text">
         <p>Victoria Chambers</p>
         <a href="#">victoria.chambers80@example.com</a>
@@ -145,7 +145,7 @@
     <p>10/15/15</p>
   </div>
   <div class="members-container">
-        <img src="images/member-2.jpg" class="profile-image">
+        <img src="images/member-2.jpg" class="profile-image" alt="dale">
     <div class="members-text">
         <p>Dale Byrd</p>
         <a href="#">dale.byrd52@example.com</a>
@@ -153,7 +153,7 @@
     <p>10/15/15</p>
   </div>
   <div class="members-container">
-        <img src="images/member-3.jpg" class="profile-image">
+        <img src="images/member-3.jpg" class="profile-image" alt="dawn">
     <div class="members-text">
         <p>Dawn Wood</p>
         <a href="#">dawn.wood16@example.com</a>
@@ -161,7 +161,7 @@
     <p>10/15/15</p>
   </div>
   <div class="members-container">
-        <img src="images/member-4.jpg" class="profile-image">
+        <img src="images/member-4.jpg" class="profile-image" alt="dan">
     <div class="members-text">
         <p>Dan Oliver</p>
         <a href="#">dan.oliver82@example.com</a>
@@ -175,7 +175,7 @@
     <h3>RECENT ACTIVITY</h3>
 
   <div class="recent-container">
-        <img src="images/member-1.jpg" class="profile-image">
+        <img src="images/member-1.jpg" class="profile-image" alt="victoria">
     <div class="recent-text">
         <p>Victoria Chambers commented on YourApp's SEO Tips</p>
         <p>4 hours ago</p>
@@ -183,7 +183,7 @@
     <p>></p>
   </div>
   <div class="recent-container">
-        <img src="images/member-2.jpg" class="profile-image">
+        <img src="images/member-2.jpg" class="profile-image" alt="dale">
     <div class="recent-text">
         <p>Dale Byrd liked the post Facebook's Changes for 2016</p>
         <p>5 hours ago</p>
@@ -191,7 +191,7 @@
     <p>></p>
   </div>
   <div class="recent-container">
-        <img src="images/member-3.jpg" class="profile-image">
+        <img src="images/member-3.jpg" class="profile-image" alt="dawn">
     <div class="recent-text">
         <p>Dawn Wood commented on Facebook's Changes for 2016</p>
         <p>6 hours ago</p>
@@ -199,7 +199,7 @@
     <p>></p>
   </div>
   <div class="recent-container">
-        <img src="images/member-4.jpg" class="profile-image">
+        <img src="images/member-4.jpg" class="profile-image" alt="dan">
     <div class="recent-text">
         <p>Dan Oliver posted YourApps's SEO Tips</p>
         <p>1 day ago</p>
