--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 </div>
 
   <!-- new members widget -->
-  <section class="members">
+  <section class="members wrapper">
     <h3>NEW MEMBERS</h3>
 
   <div class="members-container">
@@ -171,7 +171,7 @@
 </section>
 
   <!-- Recent Activity widget -->
-  <section class="recent-activity">
+  <section class="recent-activity wrapper">
     <h3>RECENT ACTIVITY</h3>
 
   <div class="recent-container">
@@ -209,7 +209,7 @@
 </section>
 
   <!-- Messaging Widget -->
-  <section class="message">
+  <section class="message wrapper">
     <h3>Message User</h3>
     <form class="widget-container">
       <input type="text" placeholder="Search for user" class="form-field" id="userField">
@@ -219,7 +219,7 @@
   </section>
 
   <!-- local settings widget -->
-  <section class="settings">
+  <section class="settings wrapper">
   <h3>Settings</h3>
 
   <!-- Toogle Code here -->
