--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
        </div>
   </div>
 
-  <div class="social-container">
+  <div class="social-container google">
     <div class="social-image">
       <svg version="1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="57" height="57">
          <path d="M18 26v-1l-1-1v-1l-1-1-1-1h-1v-1h-1-1-2l-2 1-2 1-1 1v4l2 2 2 1h5l2-1 1-1 1-2zM15 9a11 11 0 0 0-1-5l-1-2-3-1-2 2-1 3v4l2 1 1 2h2l3-1V9zm-2-9h8l-2 2h-3l2 2 1 3v3l-1 1-2 2-1 1v2l1 1 1 1 1 1 1 1 1 2v2l-2 5c-2 2-5 3-8 3H7l-2-1-2-1-2-2v-2l1-3 1-2 3-1a33 33 0 0 1 6-1l-1-3v-1-1h-1c-2 0-4 0-5-2L3 8l2-5 4-3h4zm20 5v2h-5v5h-3V7h-5V5h5V0h3v5h5z"/>
