--- a/index.html
+++ b/index.html
@@ -241,15 +241,15 @@
            </div>
 
   <select id="timezone">
-    <option disabled selected>Select a Timezone</option>
+    <option disable selected value="select a timezone">Select a Timezone</option>
     <option>Eastern</option>
     <option>Standard</option>
     <option>Pacific</option>
     <option>Mountain</option>
   </select>
   <div class="settings-button" >
-    <button class="button-primary" id="save">Save</button>
-    <button class="button-disabled" id="cancel">Cancel</button>
+    <button class="button-primary" id="save-button">Save</button>
+    <button class="button-disabled" id="cancel-button">Cancel</button>
   </div>
   </section>
 
