--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
        </svg>
       </div>
        <div class="social-text">
-          <p>Google</p>
+          <p>Google+</p>
           <p>2,530</p>
        </div>
   </div>
@@ -241,7 +241,7 @@
            </div>
 
   <select id="timezone">
-    <option disable selected value="select a timezone">Select a Timezone</option>
+    <option disabled selected value="select a timezone">Select a Timezone</option>
     <option>Eastern</option>
     <option>Standard</option>
     <option>Pacific</option>
